# vea-open-source

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  backend_deployment.yaml  config.example.json  deployment.yaml  dev.sh  failed_recaps.txt  frontend_deployment.yaml  ingress.yaml  l3.toml  pyproject.toml  quiz_predictions.txt  requirements.txt  run.sh  setup.sh
.claude/: launch.json
.serena/: project.yml
backend/: .env  Dockerfile  pyproject.toml
backend/src/: app.py  llm.py  schema.py  video_agent.py
backend/src/agents/: movieRecap.py
backend/src/utils/: file_utils.py  media.py  parse.py  textToSpeech.py  videoEditor.py
backend/src/utils/crawler/: youtube_crawler.py
backend/src/utils/oss/: gcp_oss.py
backend/templates/: email_template.html
context/: fcpxml_formatting_guide.md
dashboard/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AgentChat.tsx  AudioInspector.tsx  ChatLog.tsx  ClipInspector.tsx  NLETimeline.tsx  Panel.tsx  PlanningMonitor.tsx  PreviewPanel.tsx  ProjectBrowser.tsx  SimpleMarkdown.tsx  TimelineSettingsBar.tsx  TimelineView.tsx  Toast.tsx  TransformPreview.tsx  VideoPreview.tsx
dashboard/src/hooks/: useAgentChat.ts  useBreakpoint.ts  useWebSocket.ts
docs/: architecture-v2.md  architecture.md  implementation-plan.md  onboarding.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js
frontend/src/components/: AvailableMovies.css  AvailableMovies.jsx  ConfirmModal.css  ConfirmModal.jsx  MovieCard.css  MovieCard.jsx  MovieSearch.css  MovieSearch.jsx
lib/llm/: GeminiGenaiManager.py  GenaiManager.py  MemoriesAiManager.py  OpenRouterManager.py  gemini.py
lib/oss/: auth.py  gcp_oss.py  local_storage.py  oss.py  storage_factory.py
lib/utils/: media.py  metrics_collector.py  resolve_render.py  resolve_setup.py  vinet_setup.py
scripts/: run_autonomous.py
src/: app.py  cli.py  comprehension_benchmark.py  config.py  index_script.py  recap_script.py  schema.py  services.py
src/pipeline/: schema.py  summary_pipeline.py  utils.py
src/pipelines/: summary_pipeline_example.py
src/pipelines/common/: audio_processing.py  debug_crop.py  dynamic_cropping.py  edit_video_response copy.py  edit_video_response.py  fcpxml_exporter.py  generate_narration_audio.py  generate_subtitles.py  metadata_helpers.py  music_selection.py  refine_clip_timestamps copy.py  refine_clip_timestamps.py  schema.py  timeline_constructor.py
src/pipelines/flexibleResponse/: flexibleResponsePipeline.py  schema.py
src/pipelines/flexibleResponse/tasks/: classify_response_type.py  clip_extraction.py  edit_video_response.py  evidence_retrieval.py  flexible_gemini_answer.py  generate_narration_audio.py  generate_narration_script.py  generate_video_clip_plan.py
src/pipelines/geminiNaiveComprehensionPipeline/: pipeline.py
src/pipelines/geminiNaiveComprehensionPipeline/tasks/: naive_comprehension.py
src/pipelines/longForm/: longFormComprehensionPipeline.py
src/pipelines/longForm/tasks/: artistic_analysis.py  choose_clip_for_recap.py  edit_recap_video.py  music_selection.py  refine_plot_summary.py  scene_by_scene_comprehension.py
src/pipelines/longFormComprehension/: longFormComprehensionPipeline.py  schema.py
src/pipelines/longFormComprehension/tasks/: artistic_analysis.py  refine_plot_summary.py  rough_comprehension.py  scene_by_scene_comprehension.py
src/pipelines/longFormFlexibleResponse/: flexibleResponsePipeline.py
src/pipelines/longFormFlexibleResponse/tasks/: classify_response_type.py  evidence_retrieval.py  generate_video_clip_plan.py
src/pipelines/movieRecap/: movieRecapPipeline.py  movie_recap_pipeline.py  schema.py
src/pipelines/movieRecap/tasks/: generate_narration.py  rough_comprehension.py  scene_by_scene_comprehension.py
src/pipelines/movieRecapEditing/: movieRecapEditingPipeline.py  schema.py
src/pipelines/movieRecapEditing/tasks/: choose_clip_for_recap.py  edit_recap_video.py  generate_narration.py  music_selection.py  translate_recap.py  user_customization.py
src/pipelines/movieToShort/: movie_to_short_pipeline.py  schema.py
src/pipelines/qualityAnalysis/: quality_assesment_pipeline.py  quizing_evaluation copy.py  quizing_evaluation.py  schema.py
src/pipelines/screenplay/: schema.py  screenplay_pipeline.py
src/pipelines/shortFormComprehension/: schema.py  shortFormComprehensionPipeline.py
src/pipelines/shortFormComprehension/tasks/: content_transcription.py  general_comprehension.py
src/pipelines/v1_legacy/: __init__.py
src/pipelines/v1_legacy/flexibleResponse/: flexibleResponsePipeline.py
src/pipelines/v1_legacy/movieToShort/: movie_to_short_pipeline.py
src/pipelines/v1_legacy/qualityAnalysis/: quality_assesment_pipeline.py
src/pipelines/v1_legacy/screenplay/: screenplay_pipeline.py
src/pipelines/v1_legacy/videoComprehension/: comprehensionPipeline.py
src/pipelines/v2/: autonomous.py  logging_setup.py  schemas.py  timing.py  tool_prereqs.py  workspace.py
src/pipelines/v2/agent/: agent_session.py  modes.py  scratchpad.py  system_prompt.py  timeline_view.py  tool_definitions.py  tool_helpers.py  tools.py
src/pipelines/v2/audio/: loudness.py
src/pipelines/videoComprehension/: comprehensionPipeline copy.py  comprehensionPipeline.py  schema.py
src/routes/: _route_utils.py  v1.py  v2_pipelines.py  v2_projects.py  v2_websockets.py
tests/v2/: _test_assets.py  conftest.py  test_agent_modes.py  test_agent_tools_lvmm_port.py  test_api.py  test_cli.py  test_clip_postprocess.py  test_fcpxml_audio_paths.py  test_fcpxml_compiler.py  test_fcpxml_scaffold.py  test_ffmpeg_renderer.py  test_logging.py  test_planning_loop.py  test_project_routes.py  test_scene_detect.py  test_schemas.py  test_scratchpad.py  test_smoke_autonomous.py  test_smoke_scenarios.py  test_smoke_vea_oneshot.py  test_system_routes.py  test_timeline_view.py  test_timing.py  test_tool_prereqs.py  test_tools.py  test_workspace.py  test_workspace_safety.py
(+22 files in other folders)
