[project]
name = "vea-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]",
    "google-generativeai==0.8.5",
    "google-genai==1.12.1",
    "google-cloud-aiplatform==1.90.0",
    "google-cloud-storage",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "certifi==2025.4.26",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "charset-normalizer==3.4.1",
    "decorator==5.2.1",
    "edge-tts==7.0.1",
    "exceptiongroup==1.2.2",
    "frozenlist==1.6.0",
    "google-api-core==2.24.2",
    "google-auth==2.39.0",
    "google-cloud-core==2.4.3",
    "google-cloud-iam==2.19.0",
    "google-cloud-resource-manager==1.14.2",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.1.2",
    "multidict==6.4.3",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "proglog==0.1.11",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "srt==3.5.3",
    "tabulate==0.9.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "websockets==15.0.1",
    "yarl==1.20.0",
    "psutil>=6.1.0",
    "nvidia-ml-py3>=7.352.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
