[project]
name = "vea-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]",
    "google-generativeai==0.8.5",
    "google-genai==1.12.1",
    "google-cloud-aiplatform==1.90.0",
    "google-cloud-storage",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "certifi==2025.4.26",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "charset-normalizer==3.4.1",
    "decorator==5.2.1",
    "edge-tts==7.0.1",
    "exceptiongroup==1.2.2",
    "frozenlist==1.6.0",
    "google-api-core==2.24.2",
    "google-auth==2.39.0",
    "google-cloud-core==2.4.3",
    "google-cloud-iam==2.19.0",
    "google-cloud-resource-manager==1.14.2",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.1.2",
    "multidict==6.4.3",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "proglog==0.1.11",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "srt==3.5.3",
    "tabulate==0.9.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "websockets==15.0.1",
    "yarl==1.20.0",
    "psutil>=6.1.0",
    "nvidia-ml-py3>=7.352.0",
    "opencv-python>=4.9.0",
    "elevenlabs>=1.0.0",
    "librosa>=0.10.0",
    "pyloudnorm>=0.1.1",
    "torch>=2.0.0",
    # PORT NOTE (2026-05-19): pydavinci removed from required deps.
    # PyPI tops at 0.2.3 which pins typing-extensions==4.1.1, conflicting
    # with fastapi's modern typing-extensions. The ffmpeg draft renderer
    # is the primary render path; DaVinci Resolve final-render is opt-in
    # and unused by the autonomous smoke. Install separately if you need
    # it: ``pip install pydavinci==0.2.3 --no-deps``.
    # PORT NOTE (2026-05-19): lvmm-core supplies the L2 index/retrieve/chat
    # primitives (MaviAgent + Searcher + master_indexing pipeline) that used
    # to be served by memories.ai's hosted API via MemoriesAiManager.
    # Pinned as a path dep — assumes lvmm-core is checked out as a sibling
    # directory. Override via [tool.uv.sources] for production installs.
    "lvmm-core",
    # The two LLM-adapter SDKs lvmm-core's adapters delegate to. Listed
    # here (not as transitive optional extras on lvmm-core) because VEA
    # always uses both — OpenRouterAdapter for OpenRouter-fronted models
    # and GeminiAdapter for direct google-genai access (agent_session's
    # function-calling loop hits the latter via the .client escape hatch).
    "openai>=1.40",
    "google-genai>=1.0",
    # lvmm-core master_indexing pipeline persists to a local SQLite via
    # aiosqlite + sqlite-vec (the [local] extras on lvmm-core itself).
    # Listed here so VEA pulls them in transitively.
    "aiosqlite>=0.19",
    "sqlite-vec>=0.1",
    # MobileCLIP PyTorch dep for the embedding="mobileclip-pytorch" path.
    "torch>=2.1",
    "mobileclip @ git+https://github.com/apple/ml-mobileclip.git",
]

[tool.uv.sources]
lvmm-core = { path = "../lvmm-core", editable = true }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Live-stream logs during test runs so smoke tests can show every model
# output / intermediate as it happens (matches what
# tests/v2/test_smoke_autonomous.py needs). Without log_cli=true,
# pytest captures everything until the test finishes, defeating the
# point of "wire up logging correctly."
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-7s %(name)s :: %(message)s"
log_cli_date_format = "%H:%M:%S"
# Quiet the noisy clients that flood at INFO/DEBUG. Re-enable per-run
# by passing --log-cli-level=DEBUG if you actually need them.
filterwarnings = ["ignore::DeprecationWarning:google.*"]
# Async tests don't need @pytest.mark.asyncio decorations — conftest
# auto-marks coroutine functions.
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
