[project]
name = "vea-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]",
    "google-generativeai==0.8.5",
    "google-genai==1.12.1",
    "google-cloud-aiplatform==1.90.0",
    "google-cloud-storage",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "certifi==2025.4.26",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "charset-normalizer==3.4.1",
    "decorator==5.2.1",
    "edge-tts==7.0.1",
    "exceptiongroup==1.2.2",
    "frozenlist==1.6.0",
    "google-api-core==2.24.2",
    "google-auth==2.39.0",
    "google-cloud-core==2.4.3",
    "google-cloud-iam==2.19.0",
    "google-cloud-resource-manager==1.14.2",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.1.2",
    "multidict==6.4.3",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "proglog==0.1.11",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "srt==3.5.3",
    "tabulate==0.9.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "websockets==15.0.1",
    "yarl==1.20.0",
    "psutil>=6.1.0",
    "nvidia-ml-py3>=7.352.0",
    "opencv-python>=4.9.0",
    "elevenlabs>=1.0.0",
    "librosa>=0.10.0",
    "pyloudnorm>=0.1.1",
    # scenedetect is used by refine_clip_timestamps to give the video-LLM
    # PySceneDetect cut hints. Without it, the tool degrades to "STT word
    # boundaries only" — still works, but less accurate cuts at scene
    # changes. The tool_prereqs module surfaces this if it's ever missing.
    "scenedetect>=0.6.0",
    "torch>=2.0.0",
    # OpenAI SDK — VEA's own main_llm shim (lib/llm/OpenRouterManager.py) talks
    # to OpenRouter through the OpenAI-compatible client. This used to arrive
    # transitively via lvmm-core, but lvmm-core moved `openai` to an optional
    # `[openai]` extra, so VEA must declare it directly (it's a first-class VEA
    # dependency regardless of lvmm-core). Matches lvmm-core's own >=1.0 pin.
    "openai>=1.0",
    # NOTE: DaVinci Resolve rendering uses the native `DaVinciResolveScript`
    # module that ships with Resolve (added to PYTHONPATH at runtime by
    # lib/utils/resolve_setup.py) — NOT the `pydavinci` pip package. A stray
    # `pydavinci>=0.3.0` dep was declared here but imported nowhere, and that
    # version doesn't exist on PyPI (only <=0.2.3), which made `uv lock`/`uv sync`
    # unsatisfiable. Removed 2026-06-11.
    # lvmm-core supplies the L0-L2 video-understanding stack (indexing
    # pipeline, vector search, MaviAgent for RAG chat). Replaces the
    # previous memories.ai cloud API.
    #
    # Pinned as a path dep — assumes lvmm-core is checked out as a sibling
    # directory next to vea-open-source (../lvmm-core). Adjust to a git
    # URL or PyPI version once lvmm-core is published.
    #
    # Extras: lvmm-core keeps its CORE deps minimal (pydantic/numpy/pyyaml)
    # and gates the local video-understanding stack behind extras. VEA needs
    # the full local-editing subset — declare it explicitly so `uv sync`
    # installs it instead of silently dropping transitive deps:
    #   local          → sqlite-vec + aiosqlite (local DB + vector store)
    #   media          → av (media decode)
    #   ml             → scipy/scikit-learn/pynndescent (FINCH segmentation)
    #   mobileclip-local → mobileclip (Apple, git) + openvino + torchvision
    #                      (frame embeddings — the indexer's embed_frames stage)
    #   gemini         → google-genai (VLM captions during indexing)
    # `openai` is declared directly above because VEA's own OpenRouterManager
    # imports it; it's also lvmm-core's [openai] extra.
    "lvmm-core[local,media,ml,mobileclip-local,gemini]",
]

[tool.uv.sources]
lvmm-core = { path = "../lvmm-core", editable = true }

[project.scripts]
vea-oneshot = "src.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
